syntax = "proto3";

option csharp_namespace = "Eroad.RouteManagement.Contracts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package routemanagement.query;

// Query service for route lookups
service RouteLookup {
  rpc GetRouteById(GetRouteByIdRequest) returns (RouteLookupResponse);
  rpc GetRoutesByStatus(GetRoutesByStatusRequest) returns (RouteLookupResponse);
  rpc GetRoutesByDriver(GetRoutesByDriverRequest) returns (RouteLookupResponse);
  rpc GetRoutesByVehicle(GetRoutesByVehicleRequest) returns (RouteLookupResponse);
  rpc GetAllRoutes(GetAllRoutesRequest) returns (RouteLookupResponse);
  rpc GetCheckpointsByRoute(GetCheckpointsByRouteRequest) returns (CheckpointLookupResponse);
}

// Request messages
message GetRouteByIdRequest {
  string id = 1;
}

message GetRoutesByStatusRequest {
  string status = 1;
}

message GetRoutesByDriverRequest {
  string driver_id = 1;
}

message GetRoutesByVehicleRequest {
  string vehicle_id = 1;
}

message GetAllRoutesRequest {
}

message GetCheckpointsByRouteRequest {
  string route_id = 1;
}

// Response messages
message RouteLookupResponse {
  string message = 1;
  repeated RouteEntity routes = 2;
}

message CheckpointLookupResponse {
  string message = 1;
  repeated CheckpointEntity checkpoints = 2;
}

// Entity messages (mirror REST DTOs)
message RouteEntity {
  string id = 1;
  string origin = 2;
  string destination = 3;
  string status = 4;
  google.protobuf.StringValue assigned_driver_id = 5;
  google.protobuf.StringValue assigned_vehicle_id = 6;
  google.protobuf.Timestamp created_date = 7;
  google.protobuf.Timestamp completed_date = 8;
  repeated CheckpointEntity checkpoints = 9;
}

message CheckpointEntity {
  string route_id = 1;
  int32 sequence = 2;
  string location = 3;
  google.protobuf.Timestamp expected_time = 4;
  google.protobuf.Timestamp actual_time = 5;
}
